dbeaver/pro#7703 Annotations and code style