@@ -119,6 +119,7 @@ public abstract class CBApplication<T extends CBServerConfig>
         this.homeDirectory = new File(initHomeFolder());
     }
 
+    @Nullable
     public String getServerURL() {
         return getServerConfiguration().getServerURL();
     }
@@ -138,15 +139,18 @@ public abstract class CBApplication<T extends CBServerConfig>
         return getServerConfiguration().getServerName();
     }
 
+    @NotNull
     public String getRootURI() {
         return getServerConfiguration().getRootURI();
     }
 
+    @NotNull
     public String getServicesURI() {
         return getServerConfiguration().getServicesURI();
     }
 
 
+    @NotNull
     public Path getHomeDirectory() {
         return homeDirectory.toPath();
     }
@@ -170,10 +174,12 @@ public abstract class CBApplication<T extends CBServerConfig>
      * @return max session idle time from server configuration, may differ from {@link #getMaxSessionIdleTime()}
      */
 
+    @NotNull
     public CBAppConfig getAppConfiguration() {
         return getServerConfigurationController().getAppConfiguration();
     }
 
+    @NotNull
     public T getServerConfiguration() {
         return getServerConfigurationController().getServerConfiguration();
     }
@@ -227,10 +233,7 @@ public abstract class CBApplication<T extends CBServerConfig>
         Location instanceLoc = Platform.getInstanceLocation();
         try {
             if (!instanceLoc.isSet()) { // always false?
-                URL wsLocationURL = new URL(
-                    "file",  //$NON-NLS-1$
-                    null,
-                    getWorkspaceDirectory().toAbsolutePath().toString());
+                URL wsLocationURL = getWorkspaceDirectory().toUri().toURL();
                 instanceLoc.set(wsLocationURL, true);
             }
         } catch (Exception e) {
@@ -341,6 +344,7 @@ public abstract class CBApplication<T extends CBServerConfig>
         getAppConfiguration().setEnabledFeatures(enabledFeatures.toArray(new String[0]));
     }
 
+    @NotNull
     protected ServletSystemInformationCollector<?> createSystemInformationCollector() {
         return new ServletSystemInformationCollector<>(this);
     }
@@ -519,6 +523,7 @@ public abstract class CBApplication<T extends CBServerConfig>
         return getServerConfigurationController().getLocalHostAddress();
     }
 
+    @NotNull
     public List<InetAddress> getLocalInetAddresses() {
         return localInetAddresses;
     }
@@ -667,6 +672,7 @@ public abstract class CBApplication<T extends CBServerConfig>
         return null;
     }
 
+    @NotNull
     public CBSessionManager getSessionManager() {
         if (sessionManager == null) {
             sessionManager = createSessionManager();
@@ -691,6 +697,7 @@ public abstract class CBApplication<T extends CBServerConfig>
         return List.of();
     }
 
+    @NotNull
     @Override
     public WSEventController getEventController() {
         return eventController;
@@ -772,17 +779,18 @@ public abstract class CBApplication<T extends CBServerConfig>
         initActions.remove(actionId);
     }
 
+    @NotNull
     public Map<String, String> getInitActions() {
         return Map.copyOf(initActions);
     }
 
+    @NotNull
     @Override
     public WebServerConfig getWebServerConfig() {
         return new CBWebServerConfig(this);
     }
 
     @NotNull
-    @Override
     public ServletSystemInformationCollector<?> getSystemInformationCollector() {
         return systemInformationCollector;
     }
